<resources>
    <string name="app_name">Fortnite Stats Tracker</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="profile_search">Profile Search</string>
    <string name="weapons">Weapons</string>
    <string name="twitter">Twitter</string>
    <string name="news">News</string>
    <string name="about">About</string>
    <string name="matches_played">Matches Played</string>
    <string name="wins">Wins</string>
    <string name="win_percentage">Win Percentage</string>
    <string name="k_d_ratio">K/D Ratio</string>
    <string name="kills">Kills</string>
    <string name="kills_per_match">Kills per Match</string>
    <string name="top_10">Top 10</string>
    <string name="top_25">Top 25</string>
    <string name="hours_played">Hours Played</string>
    <string name="solo">SOLO</string>
    <string name="duo">DUO</string>
    <string name="squad">SQUAD</string>
    <string name="search_hint">Enter username</string>
    <string name="fortnie_stats_tracker">Fortnie Stats Tracker</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="stats_header_score">Score:</string>
    <string name="app_name_caps">FORTNITE STATS TRACKER</string>
    <string name="featured_items">Featured Items</string>
    <string name="tab_to_cycle">Tab to cycle</string>
    <string name="daily_items">Daily Items</string>

    <string name="empty_time">00:00:00</string>
    <string name="shop">Shop</string>

    <string-array name="weapon_details">
        <item>DPS</item>
        <item>Damage</item>
        <item>Fire Rate</item>
        <item>Bullet Type</item>
        <item>Magazine Size</item>
        <item>Reload Time</item>
        <item>Structure Damage</item>
    </string-array>

    <string-array name="tabs_titles">
        <item>SOLO</item>
        <item>DUO</item>
        <item>SQUAD</item>
    </string-array>
</resources>
