<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_search"
            android:title="@string/profile_search" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_search"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_patch_notes"
            android:icon="@drawable/ic_search"
            android:title="@string/patch_notes" />
        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/ic_search"
            android:title="@string/twitter" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_search"
            android:title="@string/about" />
    </group>

</menu>